--- a/docs/src/_includes/header.pug
+++ b/docs/src/_includes/header.pug
@@ -30,8 +30,8 @@
             .fln.bg-blue.rounded-auto.w-2x.h-2x
               img.w-100(src="assets/community/react-icon.svg", alt="React InstantSearch")
             .fla.pl-1.text-solstice.text-1.bold.hover_text-nebula React InstantSearch
-          a.fln.w-50.flex.flrnw.p-05.flc.hover_no-underline
-            .fln.bg-blue.rounded-auto.w-2x.h-2x(href="https://community.algolia.com/vue-instantsearch/")
+          a.fln.w-50.flex.flrnw.p-05.flc.hover_no-underline(href="https://community.algolia.com/vue-instantsearch/")
+            .fln.bg-blue.rounded-auto.w-2x.h-2x
               img.w-100(src="assets/community/vue-icon.svg", alt="Vue InstantSearch")
             .fla.pl-1.text-solstice.text-1.bold.hover_text-nebula Vue InstantSearch
           a.fln.w-50.flex.flrnw.p-05.flc.hover_no-underline(href="https://community.algolia.com/angular-instantsearch/")
@@ -48,7 +48,7 @@
         
     //- Project link
     .flex.fln.flrnw.flc.pl-1.sm_pl-0
-      a.cursor-pointer.uppercase.tracking-poppins.poppins.text-solstice.hover_text-nebula.hover_no-underline(href=site.url)
+      a.cursor-pointer.uppercase.tracking-poppins.poppins.text-solstice.hover_text-nebula.hover_no-underline(href='./')
         span.hidden.sm_block.ml-0x=site.project
         img.align-text-bottom.h-100.sm_hidden.ml-1(src="assets/docsearch-mark.svg" width=40 alt="DocSearch logo")
 
