--- a/docs/src/_layouts/two-columns.pug
+++ b/docs/src/_layouts/two-columns.pug
@@ -9,7 +9,7 @@ block nav
       include ../assets/icons/github.svg
 
   .md_hidden.flex.justify-start.items-center.mx-2
-    button.text-solstice.items-center.hover_text-grey-darker.focus_outline-none(href="#", onclick="toggleNav()")
+    button.custom-toggle-nav.text-solstice.items-center.hover_text-grey-darker.focus_outline-none
       svg.align-text-bottom.navigation-open.h-1x.w-1x.fill-current(role="button", xmlns="http://www.w3.org/2000/svg", viewBox="0 0 20 20")
         path(d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z")      
       svg.align-text-bottom.navigation-close.hidden.h-1x.w-1x.fill-current(role="button", xmlns="http://www.w3.org/2000/svg", viewBox="0 0 20 20")
@@ -20,7 +20,7 @@ block content
     .md_flex.max-w-lg.m-auto
       .navigation-sidebar.sticky.pin-t.top-3.h-100vh-3.overflow-y-auto.hidden.md_block.bg-white
         // Adding subsections from markdown
-        .pt-2.w-5.m-auto.sm_flex.sm_w-90.md_block.md_w-100.md_pl-2
+        .pt-2.w-5.m-auto.sm_flex.sm_w-90.md_block.md_w-100
           each category in sidebar
             .flcnw.flspa.sm_flex-auto.sm_w-33.sm_p-1.md_w-100.md_p-0
               .category.text-nebula.poppins.uppercase.mb-1.text-2=category.title
@@ -32,10 +32,10 @@ block content
                     a.block.py-0x(href=page.url, class=additionalClasses)=page.title
                     - var hasSubLinks = (page.headings && page.headings.length)
                     if hasSubLinks
-                      ul.list-reset.pl-1.text-2
+                      ul.list-reset.pl-1.text-1
                         each heading in page.headings
                           li
-                            a.block.py-0x.text-telluric(href=`${page.url}#${heading.anchor}`)=heading.title
+                            a.block.py-0x.text-telluric.whitespace-pre(href=`${page.url}#${heading.anchor}`)=heading.title
 
       .documentation-content.text-2.pt-2.pb-1.px-2.w_100.md_w-75
         .block.md_hidden.mb-1
