--- a/docs/src/_layouts/main.pug
+++ b/docs/src/_layouts/main.pug
@@ -4,7 +4,7 @@ html(lang='en')
     - const siteTitle = current.title || site.title
     - const siteDescription = site.description;
     - const siteUrl = site.url;
-    - const ogImage = siteUrl + 'asets/og_image.png';
+    - const ogImage = siteUrl + '/assets/og_image.png';
     meta(charset='utf-8')
     meta('http-equiv'='x-ua-compatible',content='ie-edge')
     title= siteTitle
