docs(logos): Replacing Stripe with MomentJS

--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -61,6 +61,9 @@ block content
               img(src="assets/logos/jekyll.jpg", alt="DocSearch + Jekyll", width=60)
               .glide__caption Jekyll
             .glide__slide
+              img(src="assets/logos/momentjs.jpg", alt="DocSearch + MomentJS", width=60)
+              .glide__caption MomentJS
+            .glide__slide
               img(src="assets/logos/netlify.jpg", alt="DocSearch + Netlify", width=60)
               .glide__caption Netlify
             .glide__slide
@@ -81,9 +84,6 @@ block content
             .glide__slide
               img(src="assets/logos/socketio.jpg", alt="DocSearch + Socket.io" , width=60)
               .glide__caption Socket.io
-            .glide__slide
-              img(src="assets/logos/stripe.jpg", alt="DocSearch + Stripe", width=60)
-              .glide__caption Stripe
             .glide__slide
               img(src="assets/logos/trello.jpg", alt="DocSearch + Trello", width=60)
               .glide__caption Trello
