docs(examples): Replacing Stripe with MomentJS in examples

--- a/docs/src/_layouts/homepage.pug
+++ b/docs/src/_layouts/homepage.pug
@@ -213,13 +213,13 @@ block content
                 img.h-2(src='assets/logos/react.jpg', alt='React')
               .fla.pl-1.text-solstice.uppercase.bold React
         .fln.w-100.sm_w-50.md_w-25.p-1.flex.flrnw
-          a.c-card.custom-demo.fla.flex.flcnw.p-05(href='https://stripe.com/docs')
+          a.c-card.custom-demo.fla.flex.flcnw.p-05(href='https://momentjs.com/')
             .fln.flc.relative.text-0.max-w-5.m-auto
-              img(src='assets/demos/example-stripe.gif', alt='Stripe')
+              img(src='assets/demos/example-momentjs.gif', alt='MomentJS')
             .fln.pt-1.flex.flrnw.flc
               .fln.text-0
-                img.h-2(src='assets/logos/stripe.jpg', alt='Stripe')
-              .fla.pl-1.text-solstice.uppercase.bold Stripe
+                img.h-2(src='assets/logos/momentjs.jpg', alt='MomentJS')
+              .fla.pl-1.text-solstice.uppercase.bold MomentJS
 
   .relative.bg-white-pure
     .bg-footer
