Make the "Edit this page" link go directly to the edit form

--- a/docs/src/_layouts/two-columns.pug
+++ b/docs/src/_layouts/two-columns.pug
@@ -51,4 +51,4 @@ block content
             include ../_includes/apply-form.pug
 
         .my-3.italic
-          a(href=current.src) Edit this page
+          a(href=current.githubEditLin) Edit this page
