--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,46 +1,48 @@
 // SEARCHBOX
-$searchbox-config: (
-  input-width: 200px,
-	input-height: 32px,
-	border-width: 1px,
-	border-radius: 16px,
-	input-border-color: #CCCCCC,
-	input-focus-border-color: #AAAAAA,
-	input-background: #FFFFFF,
-	input-focus-background: #FFFFFF,
-	font-size: 12px,
-	placeholder-color: #AAAAAA,
-	icon-size: 14px,
-	icon-position: left,
-	icon-color: #6D7E96,
-	icon-background: #458EE1,
-	icon-background-opacity: 0,
-	icon-clear-size: 8px
-) !default;
+$searchbox - config: (
+        input - width: 200 px,
+        input - height: 32 px,
+        border - width: 1 px,
+        border - radius: 16 px,
+        input - border - color: #CCCCCC,
+        input - focus - border - color: #AAAAAA,
+        input - background: #FFFFFF,
+        input - focus - background: #FFFFFF,
+        font - size: 12 px,
+        placeholder - color: #AAAAAA,
+        icon - size: 14 px,
+        icon - position: left,
+        icon - color: #6D7E96,
+	icon-background: # 458 EE1,
+        icon - background - opacity: 0,
+        icon - clear - size: 8 px
+    ) !
+    default;
 
 // DROPDOWN
-$dropdown-config: (
-  main-color: #458EE1,
+$dropdown - config: (
+        main - color: #458EE1,
   layout-type: normal,
   layout-width: normal,
   layout-alignment: align,
-  background-color: #fff,
-  border-radius: 4,
-  border-width: 1,
-  border-color: #d9d9d9,
-  box-shadow: light,
-  branding-position: bottom,
-  spacing: normal,
-  include-desc: yes,
-  background-category-header:  #ffffff,
-  font-size: normal,
-  header-color: #33363D,
-  title-color: #02060C,
-  subtitle-color: #A4A7AE,
-  text-color: #63676D,
-  highlight-color: #3881FF,
-  highlight-opacity: .1,
-  highlight-type: underline
-) !default;
+  background-color: # fff,
+        border - radius: 4,
+        border - width: 1,
+        border - color: #d9d9d9,
+        box - shadow: light,
+        branding - position: bottom,
+        spacing: normal,
+        include - desc: yes,
+        background - category - header: #ffffff,
+        font - size: normal,
+        header - color: #33363D,
+  title-color: # 02060 C,
+        subtitle - color: #A4A7AE,
+        text - color: #63676D,
+  highlight-color: # 3881 FF,
+        highlight - opacity: .1,
+        highlight - type: underline
+    ) !
+    default;
 
-$builder-height: 260px;
+$builder - height: 260 px;
