--- a/src/styles/_searchbox.scss
+++ b/src/styles/_searchbox.scss
@@ -1,15 +1,14 @@
-
 @function even-px($value) {
-  @if type-of($value) == 'number' {
+  @if type-of($value) == "number" {
     @if (unitless($value)) {
       $value: $value * 1px;
-    } @else if unit($value) == 'em' {
+    } @else if unit($value) == "em" {
       $value: ($value / 1em * 16px);
-    } @else if unit($value) == 'pts' {
+    } @else if unit($value) == "pts" {
       $value: $value * 1.3333 * 1px;
-    } @else if unit($value) == '%' {
+    } @else if unit($value) == "%" {
       $value: $value * 16 / 100% * 1px;
-    };
+    }
     $value: round($value);
     @if ($value % 2 != 0) {
       $value: $value + 1;
@@ -29,25 +28,25 @@
   $input-background: #f8f8f8,
   $input-focus-background: #fff,
   $placeholder-color: #aaa,
-  $icon: 'sbx-icon-search-1',
+  $icon: "sbx-icon-search-1",
   $icon-size: $input-height / 1.6,
   $icon-position: left,
   $icon-color: #888,
   $icon-background: $input-focus-border-color,
-  $icon-background-opacity: .1,
-  $icon-clear: 'sbx-icon-clear-1',
+  $icon-background-opacity: 0.1,
+  $icon-clear: "sbx-icon-clear-1",
   $icon-clear-size: $font-size / 1.1
 ) {
   .searchbox {
     display: inline-block;
     position: relative;
     width: $input-width;
-    height: even-px($input-height)!important;
+    height: even-px($input-height) !important;
     white-space: nowrap;
     box-sizing: border-box;
-    visibility: visible!important;
+    visibility: visible !important;
 
-    .algolia-autocomplete{
+    .algolia-autocomplete {
       display: block;
       width: 100%;
       height: 100%;
@@ -63,17 +62,23 @@
     &__input {
       display: inline-block;
       box-sizing: border-box;
-      transition: box-shadow .4s ease, background .4s ease;
+      transition: box-shadow 0.4s ease, background 0.4s ease;
       border: 0;
       border-radius: even-px($border-radius);
       box-shadow: inset 0 0 0 $border-width $input-border-color;
       background: $input-background !important;
       padding: 0;
-      padding-right: if($icon-position == 'right', even-px($input-height) + even-px($icon-clear-size) + 8px, even-px($input-height * .8))
-                + if($icon-background-opacity == 0, 0, even-px($font-size));
-      padding-left: if($icon-position == 'right',
-                even-px($font-size / 2) + even-px($border-radius / 2),
-                even-px($input-height) + if($icon-background-opacity == 0, 0, even-px($font-size * 1.2)));
+      padding-right: if(
+          $icon-position == "right",
+          even-px($input-height) + even-px($icon-clear-size) + 8px,
+          even-px($input-height * 0.8)
+        ) + if($icon-background-opacity == 0, 0, even-px($font-size));
+      padding-left: if(
+        $icon-position == "right",
+        even-px($font-size / 2) + even-px($border-radius / 2),
+        even-px($input-height) +
+          if($icon-background-opacity == 0, 0, even-px($font-size * 1.2))
+      );
       width: 100%;
       height: 100%;
       vertical-align: middle;
@@ -102,7 +107,6 @@
       &::placeholder {
         color: $placeholder-color;
       }
-
     }
 
     &__submit {
@@ -110,16 +114,21 @@
       top: 0;
       margin: 0;
       border: 0;
-      border-radius: if($icon-position == 'right', 0 $border-radius $border-radius 0, $border-radius 0 0 $border-radius);
+      border-radius: if(
+        $icon-position == "right",
+        0 $border-radius $border-radius 0,
+        $border-radius 0 0 $border-radius
+      );
       background-color: rgba($icon-background, $icon-background-opacity);
       padding: 0;
-      width: even-px($input-height) + if($icon-background-opacity == 0, 0, even-px($font-size / 2));
+      width: even-px($input-height) +
+        if($icon-background-opacity == 0, 0, even-px($font-size / 2));
       height: 100%;
       vertical-align: middle;
       text-align: center;
       font-size: inherit;
       user-select: none;
-      @if $icon-position == 'right' {
+      @if $icon-position == "right" {
         right: 0;
         left: inherit;
       } @else {
@@ -133,7 +142,7 @@
         margin-right: -4px;
         height: 100%;
         vertical-align: middle;
-        content: '';
+        content: "";
       }
 
       &:hover,
@@ -157,9 +166,12 @@
       display: block;
       position: absolute;
       top: (even-px($input-height) - even-px($icon-clear-size)) / 2 - 4px;
-      right: if($icon-position == 'right',
-        even-px($input-height) + if($icon-background-opacity == 0, 0 , even-px($font-size)),
-        (even-px($input-height) - even-px($icon-clear-size)) / 2 - 4px);
+      right: if(
+        $icon-position == "right",
+        even-px($input-height) +
+          if($icon-background-opacity == 0, 0, even-px($font-size)),
+        (even-px($input-height) - even-px($icon-clear-size)) / 2 - 4px
+      );
       margin: 0;
       border: 0;
       background: none;
@@ -167,7 +179,7 @@
       padding: 0;
       font-size: inherit;
       user-select: none;
-      fill: rgba(#000, .5);
+      fill: rgba(#000, 0.5);
 
       &.hide {
         display: none;
@@ -188,10 +200,10 @@
     &__input:valid ~ &__reset {
       display: block;
       animation-name: sbx-reset-in;
-      animation-duration: .15s;
+      animation-duration: 0.15s;
     }
 
-    @at-root{
+    @at-root {
       @keyframes sbx-reset-in {
         0% {
           transform: translate3d(-20%, 0, 0);
